# ai_engineering_hampus_donnersten_de24

./: .gitignore  README.md  pyproject.toml
03_gemini/: gemini_api_intro.ipynb
04_pydantic/: pydantic.ipynb
05_pydantic_gemini/: b_pydantic_gemini_robust.ipynb
06_fastapi_crud/: api.py  data_processing.py  try_my_api.ipynb
07_a_pydantic_ai/: pydanticai_fundamentals.ipynb
07_b_pydanticai_fastapi/: data_models.py  movies_api.py  setup_db.py  utils.py
07_b_pydanticai_fastapi/data/: movies.db
07_pydantic_ai/: pydanticai_fundamentals.ipynb
08_pydanticai_chatbot/: chat.py  eda_chat.ipynb  frontend.py
09_lancedb_vector_database/: lancdb_explotations.ipynb
video_alongs/04_pydantic/: person.json  pydantic_basic.ipynb  pydentic_api.ipynb
video_alongs/05_pydantic_gemini/: cheap_houses.csv  gemini_pydantic.ipynb  gemini_pydantic_robust.ipynb  libary.json
video_alongs/06_fastapi_crud/: api.py  data_processing.py
video_alongs/08_pydanticai_chatbot/: chat.py  eda_chat.ipynb  frontend.py
video_alongs/10_pydanticai_rags/: explorations.ipynb  ingestion.py  pdf_to_text.py
video_alongs/10_pydanticai_rags/backend/: data_models.py  rag.py
video_alongs/10_pydanticai_rags/knowledge_base/articles.lance/_transactions/: 0-c2b58416-db2f-4e00-aca3-bdf9007938e9.txn  1-92921e9e-c5c1-463e-80b6-ed1dd1b0aeff.txn  2-a691a0ce-1c6e-40f7-a865-833b699a4445.txn  3-41ba69d5-eb4d-4aab-ba9e-b39f41f677b8.txn  4-2805e712-e994-45ae-9e02-e5a1f5e80314.txn  5-1c344309-9d01-41fe-8a52-f3b2a85d7094.txn  6-02342632-dd7f-445f-a33f-b71826c026f1.txn  7-dacd1f7c-e8bf-4649-96c7-95abe36e9be7.txn  (+1 more)
